Fix bug #22592 - cascading assignments to string offsets